force-app/main/default/objects/Flosum__Metadata_Item__c/fields/Flosum__API_Name__c.field-meta.xml
<CustomField>
    <fullName>Flosum__API_Name__c</fullName>
    <label>Component Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>