force-app/main/default/objects/Flosum__Metadata_Item__c/fields/Flosum__Attachment_ID__c.field-meta.xml
<CustomField>
    <fullName>Flosum__Attachment_ID__c</fullName>
    <label>Attachment ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>