force-app/main/default/objects/Flosum__Metadata_Item__c/fields/Flosum__AttachmentIdInfo__c.field-meta.xml
<CustomField>
    <fullName>Flosum__AttachmentIdInfo__c</fullName>
    <label>AttachmentIdInfo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>