force-app/main/default/objects/Flosum__Metadata_Item__c/fields/Flosum__Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Flosum__Component_Type__c</fullName>
    <formula>IF(ISBLANK( Flosum__Veeva_Component_Type__c ), IF(ISBLANK(Flosum__Type_Of_Component__c), RecordType.Name, Flosum__Type_Of_Component__c), Flosum__Veeva_Component_Type__c)</formula>
    <label>Component Type</label>
    <type>Text</type>
</CustomField>