force-app/main/default/objects/Flosum__Metadata_Item__c/fields/Flosum__CRC32__c.field-meta.xml
<CustomField>
    <fullName>Flosum__CRC32__c</fullName>
    <label>CRC32</label>
    <length>255</length>
    <type>Text</type>
</CustomField>