force-app/main/default/objects/Flosum__Metadata_Item__c/fields/Flosum__Folder__c.field-meta.xml
<CustomField>
    <fullName>Flosum__Folder__c</fullName>
    <label>Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>