force-app/main/default/objects/Flosum__Metadata_Item__c/fields/Flosum__Is_Retrieved__c.field-meta.xml
<CustomField>
    <fullName>Flosum__Is_Retrieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Retrieved</label>
    <type>Checkbox</type>
</CustomField>