force-app/main/default/objects/Flosum__Metadata_Item__c/fields/Flosum__Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Flosum__Last_Modified_Date__c</fullName>
    <label>Changed On</label>
    <type>DateTime</type>
</CustomField>