force-app/main/default/objects/Flosum__Metadata_Item__c/fields/Flosum__Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Flosum__Last_Updated_By__c</fullName>
    <label>Changed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>