force-app/main/default/objects/Flosum__Metadata_Item__c/fields/Flosum__MetaId__c.field-meta.xml
<CustomField>
    <fullName>Flosum__MetaId__c</fullName>
    <label>MetaId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>