force-app/main/default/objects/Flosum__Metadata_Item__c/fields/Flosum__Type_Of_Component__c.field-meta.xml
<CustomField>
    <fullName>Flosum__Type_Of_Component__c</fullName>
    <label>Type Of Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>