force-app/main/default/objects/Flosum__Metadata_Item__c/fields/Flosum__Veeva_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Flosum__Veeva_Component_Type__c</fullName>
    <label>Veeva Component Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>