force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AccountingFieldMapping.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AccountingFieldMapping</fullName>
    <active>true</active>
    <label>AccountingFieldMapping</label>
</RecordType>