force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AccountingModelConfig.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AccountingModelConfig</fullName>
    <active>true</active>
    <label>AccountingModelConfig</label>
</RecordType>