force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AccountRelationshipShareRule.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AccountRelationshipShareRule</fullName>
    <active>true</active>
    <label>AccountRelationshipShareRule</label>
</RecordType>