force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ActionLinkGroupTemplate.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ActionLinkGroupTemplate</fullName>
    <active>true</active>
    <label>ActionLinkGroupTemplate</label>
</RecordType>