force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ActionPlanTemplate.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ActionPlanTemplate</fullName>
    <active>true</active>
    <label>ActionPlanTemplate</label>
</RecordType>