force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ActivationPlatform.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ActivationPlatform</fullName>
    <active>true</active>
    <label>ActivationPlatform</label>
</RecordType>