force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ActivationPlatformField.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ActivationPlatformField</fullName>
    <active>true</active>
    <label>ActivationPlatformField</label>
</RecordType>