force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ActvPfrmDataConnectorS3.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ActvPfrmDataConnectorS3</fullName>
    <active>true</active>
    <label>ActvPfrmDataConnectorS3</label>
</RecordType>