force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ActvPlatformAdncIdentifier.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ActvPlatformAdncIdentifier</fullName>
    <active>true</active>
    <label>ActvPlatformAdncIdentifier</label>
</RecordType>