force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ActvPlatformFieldValue.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ActvPlatformFieldValue</fullName>
    <active>true</active>
    <label>ActvPlatformFieldValue</label>
</RecordType>