force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AdvAccountForecastSet.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AdvAccountForecastSet</fullName>
    <active>true</active>
    <label>AdvAccountForecastSet</label>
</RecordType>