force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AIApplication.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AIApplication</fullName>
    <active>true</active>
    <label>AIApplication</label>
</RecordType>