force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AIApplicationConfig.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AIApplicationConfig</fullName>
    <active>true</active>
    <label>AIApplicationConfig</label>
</RecordType>