force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AIUsecaseDefinition.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AIUsecaseDefinition</fullName>
    <active>true</active>
    <label>AIUsecaseDefinition</label>
</RecordType>