force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AnalyticSnapshot.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AnalyticSnapshot</fullName>
    <active>true</active>
    <label>AnalyticSnapshot</label>
</RecordType>