force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AnimationRule.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AnimationRule</fullName>
    <active>true</active>
    <label>AnimationRule</label>
</RecordType>