force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ApexClass.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ApexClass</fullName>
    <active>true</active>
    <label>ApexClass</label>
</RecordType>