force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ApexComponent.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ApexComponent</fullName>
    <active>true</active>
    <label>ApexComponent</label>
</RecordType>