force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ApexEmailNotifications.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ApexEmailNotifications</fullName>
    <active>true</active>
    <label>ApexEmailNotifications</label>
</RecordType>