force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ApexPage.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ApexPage</fullName>
    <active>true</active>
    <label>ApexPage</label>
</RecordType>