force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ApexTestSuite.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ApexTestSuite</fullName>
    <active>true</active>
    <label>ApexTestSuite</label>
</RecordType>