force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ApexTrigger.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ApexTrigger</fullName>
    <active>true</active>
    <label>ApexTrigger</label>
</RecordType>