force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AppMenu.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AppMenu</fullName>
    <active>true</active>
    <label>AppMenu</label>
</RecordType>