force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AppointmentAssignmentPolicy.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AppointmentAssignmentPolicy</fullName>
    <active>true</active>
    <label>AppointmentAssignmentPolicy</label>
</RecordType>