force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AppointmentSchedulingPolicy.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AppointmentSchedulingPolicy</fullName>
    <active>true</active>
    <label>AppointmentSchedulingPolicy</label>
</RecordType>