force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ApprovalProcess.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ApprovalProcess</fullName>
    <active>true</active>
    <label>ApprovalProcess</label>
</RecordType>