force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AssessmentQuestion.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AssessmentQuestion</fullName>
    <active>true</active>
    <label>AssessmentQuestion</label>
</RecordType>