force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AssessmentQuestionSet.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AssessmentQuestionSet</fullName>
    <active>true</active>
    <label>AssessmentQuestionSet</label>
</RecordType>