force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AssignmentRule.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AssignmentRule</fullName>
    <active>true</active>
    <label>AssignmentRule</label>
</RecordType>