force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AssignmentRules.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AssignmentRules</fullName>
    <active>true</active>
    <label>AssignmentRules</label>
</RecordType>