force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__Audience.recordType-meta.xml
<RecordType>
    <fullName>Flosum__Audience</fullName>
    <active>true</active>
    <label>Audience</label>
</RecordType>