force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AuthProvider.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AuthProvider</fullName>
    <active>true</active>
    <label>AuthProvider</label>
</RecordType>