force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AutoResponseRule.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AutoResponseRule</fullName>
    <active>true</active>
    <label>AutoResponseRule</label>
</RecordType>