force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__AutoResponseRules.recordType-meta.xml
<RecordType>
    <fullName>Flosum__AutoResponseRules</fullName>
    <active>true</active>
    <label>AutoResponseRules</label>
</RecordType>