force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__BaseSharingRule.recordType-meta.xml
<RecordType>
    <fullName>Flosum__BaseSharingRule</fullName>
    <active>true</active>
    <label>BaseSharingRule</label>
</RecordType>