force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__BatchCalcJobDefinition.recordType-meta.xml
<RecordType>
    <fullName>Flosum__BatchCalcJobDefinition</fullName>
    <active>true</active>
    <label>BatchCalcJobDefinition</label>
</RecordType>