force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__BatchProcessJobDefinition.recordType-meta.xml
<RecordType>
    <fullName>Flosum__BatchProcessJobDefinition</fullName>
    <active>true</active>
    <label>BatchProcessJobDefinition</label>
</RecordType>