force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__BlacklistedConsumer.recordType-meta.xml
<RecordType>
    <fullName>Flosum__BlacklistedConsumer</fullName>
    <active>true</active>
    <label>BlacklistedConsumer</label>
</RecordType>