force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__Bot.recordType-meta.xml
<RecordType>
    <fullName>Flosum__Bot</fullName>
    <active>true</active>
    <label>Bot</label>
</RecordType>