force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__BotBlock.recordType-meta.xml
<RecordType>
    <fullName>Flosum__BotBlock</fullName>
    <active>true</active>
    <label>BotBlock</label>
</RecordType>