force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__BotTemplate.recordType-meta.xml
<RecordType>
    <fullName>Flosum__BotTemplate</fullName>
    <active>true</active>
    <label>BotTemplate</label>
</RecordType>