force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__BotVersion.recordType-meta.xml
<RecordType>
    <fullName>Flosum__BotVersion</fullName>
    <active>true</active>
    <label>BotVersion</label>
</RecordType>