force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__BrandingSet.recordType-meta.xml
<RecordType>
    <fullName>Flosum__BrandingSet</fullName>
    <active>true</active>
    <label>BrandingSet</label>
</RecordType>