force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__BriefcaseDefinition.recordType-meta.xml
<RecordType>
    <fullName>Flosum__BriefcaseDefinition</fullName>
    <active>true</active>
    <label>BriefcaseDefinition</label>
</RecordType>