force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__BusinessProcess.recordType-meta.xml
<RecordType>
    <fullName>Flosum__BusinessProcess</fullName>
    <active>true</active>
    <label>BusinessProcess</label>
</RecordType>