force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__BusinessProcessGroup.recordType-meta.xml
<RecordType>
    <fullName>Flosum__BusinessProcessGroup</fullName>
    <active>true</active>
    <label>BusinessProcessGroup</label>
</RecordType>