force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CallCenter.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CallCenter</fullName>
    <active>true</active>
    <label>CallCenter</label>
</RecordType>