force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CallCoachingMediaProvider.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CallCoachingMediaProvider</fullName>
    <active>true</active>
    <label>CallCoachingMediaProvider</label>
</RecordType>