force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CampaignInfluenceModel.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CampaignInfluenceModel</fullName>
    <active>true</active>
    <label>CampaignInfluenceModel</label>
</RecordType>