force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CareProviderSearchConfig.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CareProviderSearchConfig</fullName>
    <active>true</active>
    <label>CareProviderSearchConfig</label>
</RecordType>