force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CareSystemFieldMapping.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CareSystemFieldMapping</fullName>
    <active>true</active>
    <label>CareSystemFieldMapping</label>
</RecordType>