force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CaseSubjectParticle.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CaseSubjectParticle</fullName>
    <active>true</active>
    <label>CaseSubjectParticle</label>
</RecordType>