force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__Certificate.recordType-meta.xml
<RecordType>
    <fullName>Flosum__Certificate</fullName>
    <active>true</active>
    <label>Certificate</label>
</RecordType>