force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ChannelLayout.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ChannelLayout</fullName>
    <active>true</active>
    <label>ChannelLayout</label>
</RecordType>