force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ChatterExtension.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ChatterExtension</fullName>
    <active>true</active>
    <label>ChatterExtension</label>
</RecordType>