force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CleanDataService.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CleanDataService</fullName>
    <active>true</active>
    <label>CleanDataService</label>
</RecordType>