force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CMSConnectSource.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CMSConnectSource</fullName>
    <active>true</active>
    <label>CMSConnectSource</label>
</RecordType>