force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__Commerce_Cloud.recordType-meta.xml
<RecordType>
    <fullName>Flosum__Commerce_Cloud</fullName>
    <active>true</active>
    <label>Commerce Cloud</label>
</RecordType>