force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__Community.recordType-meta.xml
<RecordType>
    <fullName>Flosum__Community</fullName>
    <active>true</active>
    <label>Community</label>
</RecordType>