force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CommunityTemplateDefinition.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CommunityTemplateDefinition</fullName>
    <active>true</active>
    <label>CommunityTemplateDefinition</label>
</RecordType>