force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CommunityThemeDefinition.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CommunityThemeDefinition</fullName>
    <active>true</active>
    <label>CommunityThemeDefinition</label>
</RecordType>