force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CompactLayout.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CompactLayout</fullName>
    <active>true</active>
    <label>CompactLayout</label>
</RecordType>