force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ConnectedApp.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ConnectedApp</fullName>
    <active>true</active>
    <label>ConnectedApp</label>
</RecordType>