force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ContentAsset.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ContentAsset</fullName>
    <active>true</active>
    <label>ContentAsset</label>
</RecordType>