force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__ContractType.recordType-meta.xml
<RecordType>
    <fullName>Flosum__ContractType</fullName>
    <active>true</active>
    <label>ContractType</label>
</RecordType>