force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CorsWhitelistOrigin.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CorsWhitelistOrigin</fullName>
    <active>true</active>
    <label>CorsWhitelistOrigin</label>
</RecordType>