force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CriteriaBasedSharingRule.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CriteriaBasedSharingRule</fullName>
    <active>true</active>
    <label>CriteriaBasedSharingRule</label>
</RecordType>