force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CspTrustedSite.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CspTrustedSite</fullName>
    <active>true</active>
    <label>CspTrustedSite</label>
</RecordType>