force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CustomApplication.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CustomApplication</fullName>
    <active>true</active>
    <label>CustomApplication</label>
</RecordType>