force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CustomApplicationComponent.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CustomApplicationComponent</fullName>
    <active>true</active>
    <label>CustomApplicationComponent</label>
</RecordType>