force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CustomFeedFilter.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CustomFeedFilter</fullName>
    <active>true</active>
    <label>CustomFeedFilter</label>
</RecordType>