force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CustomField.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CustomField</fullName>
    <active>true</active>
    <label>CustomField</label>
</RecordType>