force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CustomHelpMenuSection.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CustomHelpMenuSection</fullName>
    <active>true</active>
    <label>CustomHelpMenuSection</label>
</RecordType>