force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CustomLabel.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CustomLabel</fullName>
    <active>true</active>
    <label>CustomLabel</label>
</RecordType>