force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CustomLabels.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CustomLabels</fullName>
    <active>true</active>
    <label>CustomLabels</label>
</RecordType>