force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CustomMetadata.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CustomMetadata</fullName>
    <active>true</active>
    <label>CustomMetadata</label>
</RecordType>