force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CustomNotificationType.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CustomNotificationType</fullName>
    <active>true</active>
    <label>CustomNotificationType</label>
</RecordType>