force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CustomObject.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CustomObject</fullName>
    <active>true</active>
    <label>CustomObject</label>
</RecordType>