force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CustomObjectTranslation.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CustomObjectTranslation</fullName>
    <active>true</active>
    <label>CustomObjectTranslation</label>
</RecordType>