force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CustomPageWebLink.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CustomPageWebLink</fullName>
    <active>true</active>
    <label>CustomPageWebLink</label>
</RecordType>