force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CustomPermission.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CustomPermission</fullName>
    <active>true</active>
    <label>CustomPermission</label>
</RecordType>