force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CustomSite.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CustomSite</fullName>
    <active>true</active>
    <label>CustomSite</label>
</RecordType>