force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__CustomTab.recordType-meta.xml
<RecordType>
    <fullName>Flosum__CustomTab</fullName>
    <active>true</active>
    <label>CustomTab</label>
</RecordType>