force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__Dashboard.recordType-meta.xml
<RecordType>
    <fullName>Flosum__Dashboard</fullName>
    <active>true</active>
    <label>Dashboard</label>
</RecordType>