force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DashboardFolder.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DashboardFolder</fullName>
    <active>true</active>
    <label>DashboardFolder</label>
</RecordType>