force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DataCategoryGroup.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DataCategoryGroup</fullName>
    <active>true</active>
    <label>DataCategoryGroup</label>
</RecordType>