force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DataConnectorIngestApi.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DataConnectorIngestApi</fullName>
    <active>true</active>
    <label>DataConnectorIngestApi</label>
</RecordType>