force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DataConnectorS3.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DataConnectorS3</fullName>
    <active>true</active>
    <label>DataConnectorS3</label>
</RecordType>