force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DataPackageKitDefinition.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DataPackageKitDefinition</fullName>
    <active>true</active>
    <label>DataPackageKitDefinition</label>
</RecordType>