force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DataPackageKitObject.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DataPackageKitObject</fullName>
    <active>true</active>
    <label>DataPackageKitObject</label>
</RecordType>