force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DataSource.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DataSource</fullName>
    <active>true</active>
    <label>DataSource</label>
</RecordType>