force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DataSourceBundleDefinition.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DataSourceBundleDefinition</fullName>
    <active>true</active>
    <label>DataSourceBundleDefinition</label>
</RecordType>