force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DataSourceObject.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DataSourceObject</fullName>
    <active>true</active>
    <label>DataSourceObject</label>
</RecordType>