force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DataSrcDataModelFieldMap.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DataSrcDataModelFieldMap</fullName>
    <active>true</active>
    <label>DataSrcDataModelFieldMap</label>
</RecordType>