force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DataStreamDefinition.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DataStreamDefinition</fullName>
    <active>true</active>
    <label>DataStreamDefinition</label>
</RecordType>