force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DataStreamTemplate.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DataStreamTemplate</fullName>
    <active>true</active>
    <label>DataStreamTemplate</label>
</RecordType>