force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DataWeaveResource.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DataWeaveResource</fullName>
    <active>true</active>
    <label>DataWeaveResource</label>
</RecordType>