force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DecisionMatrixDefinition.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DecisionMatrixDefinition</fullName>
    <active>true</active>
    <label>DecisionMatrixDefinition</label>
</RecordType>