force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DecisionTable.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DecisionTable</fullName>
    <active>true</active>
    <label>DecisionTable</label>
</RecordType>