force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DecisionTableDatasetLink.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DecisionTableDatasetLink</fullName>
    <active>true</active>
    <label>DecisionTableDatasetLink</label>
</RecordType>