force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DelegateGroup.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DelegateGroup</fullName>
    <active>true</active>
    <label>DelegateGroup</label>
</RecordType>