force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DigitalExperience.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DigitalExperience</fullName>
    <active>true</active>
    <label>DigitalExperience</label>
</RecordType>