force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DigitalExperienceBundle.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DigitalExperienceBundle</fullName>
    <active>true</active>
    <label>DigitalExperienceBundle</label>
</RecordType>