force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DigitalExperienceConfig.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DigitalExperienceConfig</fullName>
    <active>true</active>
    <label>DigitalExperienceConfig</label>
</RecordType>