force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DiscoveryAIModel.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DiscoveryAIModel</fullName>
    <active>true</active>
    <label>DiscoveryAIModel</label>
</RecordType>