force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DiscoveryGoal.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DiscoveryGoal</fullName>
    <active>true</active>
    <label>DiscoveryGoal</label>
</RecordType>