force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DiscoveryStory.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DiscoveryStory</fullName>
    <active>true</active>
    <label>DiscoveryStory</label>
</RecordType>