force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__Document.recordType-meta.xml
<RecordType>
    <fullName>Flosum__Document</fullName>
    <active>true</active>
    <label>Document</label>
</RecordType>