force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DocumentFolder.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DocumentFolder</fullName>
    <active>true</active>
    <label>DocumentFolder</label>
</RecordType>