force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__DuplicateRule.recordType-meta.xml
<RecordType>
    <fullName>Flosum__DuplicateRule</fullName>
    <active>true</active>
    <label>DuplicateRule</label>
</RecordType>