force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__EclairGeoData.recordType-meta.xml
<RecordType>
    <fullName>Flosum__EclairGeoData</fullName>
    <active>true</active>
    <label>EclairGeoData</label>
</RecordType>