force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__EmailFolder.recordType-meta.xml
<RecordType>
    <fullName>Flosum__EmailFolder</fullName>
    <active>true</active>
    <label>EmailFolder</label>
</RecordType>