force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__EmailServicesFunction.recordType-meta.xml
<RecordType>
    <fullName>Flosum__EmailServicesFunction</fullName>
    <active>true</active>
    <label>EmailServicesFunction</label>
</RecordType>