force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__EmailTemplate.recordType-meta.xml
<RecordType>
    <fullName>Flosum__EmailTemplate</fullName>
    <active>true</active>
    <label>EmailTemplate</label>
</RecordType>