force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__EmailTemplateFolder.recordType-meta.xml
<RecordType>
    <fullName>Flosum__EmailTemplateFolder</fullName>
    <active>true</active>
    <label>EmailTemplateFolder</label>
</RecordType>