force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__EmbeddedServiceBranding.recordType-meta.xml
<RecordType>
    <fullName>Flosum__EmbeddedServiceBranding</fullName>
    <active>true</active>
    <label>EmbeddedServiceBranding</label>
</RecordType>