force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__EmbeddedServiceConfig.recordType-meta.xml
<RecordType>
    <fullName>Flosum__EmbeddedServiceConfig</fullName>
    <active>true</active>
    <label>EmbeddedServiceConfig</label>
</RecordType>