force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__EmbeddedServiceFieldService.recordType-meta.xml
<RecordType>
    <fullName>Flosum__EmbeddedServiceFieldService</fullName>
    <active>true</active>
    <label>EmbeddedServiceFieldService</label>
</RecordType>