force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__EmbeddedServiceFlowConfig.recordType-meta.xml
<RecordType>
    <fullName>Flosum__EmbeddedServiceFlowConfig</fullName>
    <active>true</active>
    <label>EmbeddedServiceFlowConfig</label>
</RecordType>