force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__EmbeddedServiceLiveAgent.recordType-meta.xml
<RecordType>
    <fullName>Flosum__EmbeddedServiceLiveAgent</fullName>
    <active>true</active>
    <label>EmbeddedServiceLiveAgent</label>
</RecordType>