force-app/main/default/objects/Flosum__Metadata_Item__c/recordTypes/Flosum__EmbeddedServiceMenuSettings.recordType-meta.xml
<RecordType>
    <fullName>Flosum__EmbeddedServiceMenuSettings</fullName>
    <active>true</active>
    <label>EmbeddedServiceMenuSettings</label>
</RecordType>